shawk/awk/rdpg/examples/accept_result.txt
1+2;
1.00 + 2.00 = 3.00

2-1;
2.00 - 1.00 = 1.00

3*2;
3.00 * 2.00 = 6.00

4/2;
4.00 / 2.00 = 2.00

5^2;
5.00 ^ 2.00 = 25.00

(1-1);
1.00 - 1.00 = 0.00

1 + 2 + 3;
1.00 + 2.00 = 3.00
3.00 + 3.00 = 6.00

3 - 2 - 1;
3.00 - 2.00 = 1.00
1.00 - 1.00 = 0.00

3 * 4 * 5;
3.00 * 4.00 = 12.00
12.00 * 5.00 = 60.00

20 / 2 / 2;
20.00 / 2.00 = 10.00
10.00 / 2.00 = 5.00

2^3^2^1;
2.00 ^ 1.00 = 2.00
3.00 ^ 2.00 = 9.00
2.00 ^ 9.00 = 512.00

2 + -1;
2.00 + -1.00 = 1.00

1 - -1;
1.00 - -1.00 = 2.00

3 * -2;
3.00 * -2.00 = -6.00

-4 / 2;
-4.00 / 2.00 = -2.00

-4 / -2;
-4.00 / -2.00 = 2.00

-5^-1;
-5.00 ^ -1.00 = -0.20

1 + 2 * 3 - 1;
2.00 * 3.00 = 6.00
1.00 + 6.00 = 7.00
7.00 - 1.00 = 6.00

1 + 4 / 2 - 1 + 6 * 5 + 1;
4.00 / 2.00 = 2.00
1.00 + 2.00 = 3.00
3.00 - 1.00 = 2.00
6.00 * 5.00 = 30.00
2.00 + 30.00 = 32.00
32.00 + 1.00 = 33.00

1 + 2 * 3 ^ 2 - 1^1;
3.00 ^ 2.00 = 9.00
2.00 * 9.00 = 18.00
1.00 + 18.00 = 19.00
1.00 ^ 1.00 = 1.00
19.00 - 1.00 = 18.00

1 + 12 / 2 ^ 2- 1^1;
2.00 ^ 2.00 = 4.00
12.00 / 4.00 = 3.00
1.00 + 3.00 = 4.00
1.00 ^ 1.00 = 1.00
4.00 - 1.00 = 3.00

5 + 1 * 3 ^ 2 - 6^1;
3.00 ^ 2.00 = 9.00
1.00 * 9.00 = 9.00
5.00 + 9.00 = 14.00
6.00 ^ 1.00 = 6.00
14.00 - 6.00 = 8.00

5 - 1 * 3 ^ 2 + 6^1;
3.00 ^ 2.00 = 9.00
1.00 * 9.00 = 9.00
5.00 - 9.00 = -4.00
6.00 ^ 1.00 = 6.00
-4.00 + 6.00 = 2.00

(1 + 2) * 3 ^ 2 - 1^1;
1.00 + 2.00 = 3.00
3.00 ^ 2.00 = 9.00
3.00 * 9.00 = 27.00
1.00 ^ 1.00 = 1.00
27.00 - 1.00 = 26.00

1 + 12 / 2 ^ (2 - 1)^1;
2.00 - 1.00 = 1.00
1.00 ^ 1.00 = 1.00
2.00 ^ 1.00 = 2.00
12.00 / 2.00 = 6.00
1.00 + 6.00 = 7.00

5 + (1 * 3) ^ 2 - -5^1;
1.00 * 3.00 = 3.00
3.00 ^ 2.00 = 9.00
5.00 + 9.00 = 14.00
-5.00 ^ 1.00 = -5.00
14.00 - -5.00 = 19.00

5 - 1 * (3 ^ 2 + 5)^1;
3.00 ^ 2.00 = 9.00
9.00 + 5.00 = 14.00
14.00 ^ 1.00 = 14.00
1.00 * 14.00 = 14.00
5.00 - 14.00 = -9.00

1+2;2+3
1.00 + 2.00 = 3.00
2.00 + 3.00 = 5.00
error: expected ';', got 'EOI' instead
1+2;2+3
       ^
error: couldn't synchronize on ';'
error: file 'test_input.txt', line 39
1+2
1.00 + 2.00 = 3.00
error: expected ';', got 'EOI' instead
1+2
   ^
error: couldn't synchronize on ';'
error: file 'test_input.txt', line 40
2+3;
2.00 + 3.00 = 5.00

1 - *2; 2-3;
error: expected 'number', '(', got '*' instead
1 - *2; 2-3;
    ^

1 - *2; 2-3; -(;
error: expected 'number', '(', got '*' instead
1 - *2; 2-3; -(;
    ^
error: expected 'number', got '(' instead
1 - *2; 2-3; -(;
              ^

1 - *2; 2-3
error: expected 'number', '(', got '*' instead
1 - *2; 2-3
    ^
error: expected ';', got 'EOI' instead
1 - *2; 2-3
           ^
error: couldn't synchronize on ';'
error: file 'test_input.txt', line 44
/3;4(;5);6+1-()
error: expected 'number', '(', got '/' instead
/3;4(;5);6+1-()
^
error: expected ';', got '(' instead
/3;4(;5);6+1-()
    ^
error: expected ';', got ')' instead
/3;4(;5);6+1-()
       ^
error: expected 'number', '(', got ')' instead
/3;4(;5);6+1-()
              ^
error: couldn't synchronize on ';'
error: file 'test_input.txt', line 45
/3;4(;5);6+1-();
error: expected 'number', '(', got '/' instead
/3;4(;5);6+1-();
^
error: expected ';', got '(' instead
/3;4(;5);6+1-();
    ^
error: expected ';', got ')' instead
/3;4(;5);6+1-();
       ^
error: expected 'number', '(', got ')' instead
/3;4(;5);6+1-();
              ^

5---1;5+++2;6^----3;
error: expected 'number', got '-' instead
5---1;5+++2;6^----3;
   ^
error: expected 'number', got '+' instead
5---1;5+++2;6^----3;
         ^
error: expected 'number', got '-' instead
5---1;5+++2;6^----3;
               ^
error: expected 'number', got '-' instead
5---1;5+++2;6^----3;
                 ^

3**3;
error: expected 'number', '(', got '*' instead
3**3;
  ^

3*;3;53+^3;100-;
error: expected 'number', '(', got ';' instead
3*;3;53+^3;100-;
  ^
error: expected 'number', '(', got '^' instead
3*;3;53+^3;100-;
        ^
error: expected 'number', '(', got ';' instead
3*;3;53+^3;100-;
               ^

